<resources>
    <string name="app_name">SecureChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="users">Users</string>
    <string name="rooms">Rooms</string>
    <string name="setting">Setting</string>
    <string name="type_here">Type here</string>
    <string name="no_message_yet">No message yet</string>
    <string name="author_expired">Authorization has expired, please login again!</string>
    <string name="user_privileges">User privileges</string>
    <string name="add_member">Add member</string>
    <string name="kick">Kick</string>
    <string name="update">Update</string>
    <string name="send_message">Send message</string>
    <string name="view_file">View file</string>
    <string name="exit_room">Exit room</string>
    <string name="str_not_allow_view_file">You are not allow to view this file</string>
    <string name="str_pin_not_set">You have not set up a pin code yet. Set up now?</string>
    <string name="str_enter_pw_as_email">Please enter your password as %s</string>
    <string name="enter">Enter</string>
</resources>